telefoonnummer ouders ipv ouds/verzorgers

--- a/kampeerweekend/inschrijven.html
+++ b/kampeerweekend/inschrijven.html
@@ -87,8 +87,8 @@
           </div>
           <br>
           <div class="input-group">
-            <span class="input-group-addon input" id="basic-addon2">Telefoonnummer<br>ouders/verzorgers</span>
-            <input type="phone" class="form-control input-lg" placeholder="06-123456789" aria-describedby="basic-addon1">
+            <span class="input-group-addon input" id="basic-addon2">Telefoonnummer ouders</span>
+            <input type="phone" class="form-control input" placeholder="06-123456789" aria-describedby="basic-addon1">
           </div>
           <br>
           <div class="input-group">
