Alles in .php gezet
alles in .php bestanden in index map gezet en begin gemaakt aan
responsive forms

--- a/kampeerweekend/inschrijven.html
+++ b/kampeerweekend/inschrijven.html
@@ -72,27 +72,27 @@
       <div class="row">
         <div class="col-md-4 col-md-offset-1">
           <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">Naam</span>
+            <span class="input-group-addon" id="basic-addon1">Naam*</span>
             <input type="text" class="form-control" placeholder="Naam Achternaam" aria-describedby="basic-addon1">
           </div>
           <br>
           <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">Adres</span>
+            <span class="input-group-addon" id="basic-addon1">Adres*</span>
             <input type="text" class="form-control" placeholder="Straat straatnummer" aria-describedby="basic-addon1">
           </div>
           <br>
           <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">Geboortejaar</span>
+            <span class="input-group-addon" id="basic-addon1">Geboortejaar*</span>
             <input type="text" class="form-control" placeholder="DD-MM-JJJJ" aria-describedby="basic-addon1">
           </div>
           <br>
           <div class="input-group">
-            <span class="input-group-addon input" id="basic-addon2">Telefoonnummer ouders</span>
+            <span class="input-group-addon input" id="basic-addon2">Telefoonnummer ouders*</span>
             <input type="phone" class="form-control input" placeholder="06-123456789" aria-describedby="basic-addon1">
           </div>
           <br>
           <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">Email-Adres</span>
+            <span class="input-group-addon" id="basic-addon1">Email-Adres*</span>
             <input type="email" class="form-control" placeholder="iemand@email.com" aria-describedby="basic-addon1">
           </div>
 
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <label for="sel1">Categorie:</label>
+            <label for="sel1">Categorie*:</label>
             <select class="form-control" id="sel1">
               <option>Pupillen C</option>
               <option>Pupillen B</option>
@@ -115,7 +115,7 @@
             </select>
           </div>
           
-          <p style="font-weight: bold">In het bezit van een zwemdiploma:</p>
+          <p style="font-weight: bold">In het bezit van een zwemdiploma*:</p>
           <div class="radio">
             <label class="radio-inline"><input type="radio" name="optradio">Ja</label>
             <label class="radio-inline"><input type="radio" name="optradio">Nee</label>
